Adicionando exclusao de processos
